<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/road" >

    <TextView
        android:id="@+id/fromId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from" />

    <TextView
        android:id="@+id/toId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fromId"
        android:text="@string/to" />

    <TextView
        android:id="@+id/dateId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toId"
        android:text="@string/date" />

    <TextView
        android:id="@+id/typeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateId"
        android:text="@string/type" />

    <TextView
        android:id="@+id/seatsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeId"
        android:text="@string/seats" />

    <TextView
        android:id="@+id/priceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seatsId"
        android:text="@string/price" />

    <TextView
        android:id="@+id/makeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priceId"
        android:text="@string/make" />

    <TextView
        android:id="@+id/smokerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makeId"
        android:text="@string/smoker" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/smokerId"
        android:layout_alignBottom="@+id/smokerId"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/smokerId"
        android:text="CheckBox" />

    <EditText
        android:id="@+id/pleaseChooseId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/typeId"
        android:layout_toRightOf="@+id/dateId"
        android:ems="10"
        android:inputType="none"
        android:text="@string/pleaceChoose" >

        <requestFocus />
    </EditText>

</RelativeLayout>